# perpAscend

./: .gitignore  Anchor.toml  Cargo.toml  README.md  TESTING_ROADMAP.md  WEBSOCKET_IMPLEMENTATION.md  package-lock.json  package.json
programs/solana-perps-flywheel/: Cargo.toml
programs/solana-perps-flywheel/programs/solana-perps-flywheel/src/: lib.rs
programs/solana-perps-flywheel/src/: errors.rs  events.rs  lib.rs  oracle.rs  state.rs
programs/solana-perps-flywheel/src/instructions/: admin.rs  advanced_position.rs  advanced_position_fixed.rs  advanced_position_old.rs  advanced_position_simple.rs  enhanced_liquidation.rs  liquidate.rs  mod.rs  trade.rs
tests/: advanced-tests.ts  integration-test-comprehensive.ts  integration-tests.ts  solana-perps-flywheel.ts  stress-tests.ts  test-summary.ts
ui/: PHASE_1_TESTING_REPORT.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
ui/src/: App.new.tsx  App.tsx  index.css  main.tsx
ui/src/components/: AdvancedPositionManager.tsx  ProtocolSwitcher.tsx  RealTimeDemo.tsx  RealTimePriceDisplay.tsx  StopLossManager.tsx  WalletContextProvider.tsx  WebSocketStatusMonitor.tsx  WebSocketTestPanel.tsx
ui/src/hooks/: useEnhancedRealTimePrices.ts  useProtocolSwitcher.ts
ui/src/lib/: WebSocketPriceService.ts  enhancedProtocol.ts  idl.json  mockProtocol.ts  realSolanaProtocol.ts  realSolanaProtocol_v2.ts  realTimeDataService.ts  types.ts
ui/src/test/: RealTimePriceDisplay.test.tsx  StopLossManager.optimized.test.tsx  StopLossManager.test.tsx  setup.ts  (+6 more)
